[package]
name = "laptimer"
version = "0.1.0"
edition = "2021"
author = "Jonathan Behrens <fintelia@gmail.com>"
repository = "https://github.com/fintelia/laptimer"
readme = "README.md"
description = "Simple crate to print the time spent between different points in a program."

[dependencies]
lazy_static = "1.4.0"
